[Fix] Toast Wrapping with Overridden Plotly Styles

--- a/packages/chart/src/Chart.scss
+++ b/packages/chart/src/Chart.scss
@@ -8,6 +8,10 @@ $plotly-color-btn-active: rgba(255, 255, 255, 70%);
 
 .plotly-notifier {
   margin-right: $plotly-notifier-margin-right;
+
+  // Needed to specify in order to override the plotly styles
+  max-width: 325px;
+  width: 325px;
 }
 
 .plotly-notifier .notifier-note {
@@ -17,6 +21,12 @@ $plotly-color-btn-active: rgba(255, 255, 255, 70%);
   border: 0 !important;
   border-radius: $plotly-notifier-note-border-radius !important;
   background: $plotly-notifier-note-bg !important;
+  min-width: fit-content !important;
+  max-width: inherit !important;
+  
+  // This prevents line wrapping
+  overflow: hidden !important;
+  white-space: nowrap !important;
 }
 
 .chart-wrapper {
